--- a/title3.html
+++ b/title3.html
@@ -3,19 +3,13 @@
 <head>
 	<title>Title</title>
 	<link href="./css/title.css" rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Cormorant:300,400,700' rel='stylesheet' type='text/css'>
-	<script
-  src="https://code.jquery.com/jquery-3.3.1.min.js"
-  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-  crossorigin="anonymous"></script>
+	<script src="./js/jquery-3.3.1.min.js"></script>
 </head>
 <body>
 
 	<div id="container">
-		<div id="explaination">
-		<!-- <p style="text-align: cetner; margin-left: 375px; text-decoration: underline;">DISCLAIMER</p>
-		<br> -->
-		<h1 style="font-size: 36px; text-align:left;"> <span id="bold">Reasonably so.</span> Doctors and reseachers have pointed out that lifestyle and environmental changes significantly reduce the likelihood of such diseases. But what people may not be quite aware of is the progression of certain diseases and how strongly and positively associated they are to other diseases.</h1>
+		<div id="explaination2">
+		<h1 style="font-size: 36px; text-align:left;"><span id="bold">Reasonably so.</span> Doctors and reseachers have pointed out that lifestyle and environmental changes significantly reduce the likelihood of such diseases. But what people may not be quite aware of is the progression of certain diseases and how strongly and positively associated they are to other diseases.</h1>
 		<br>
 		</div>
 	</div>
