--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 
 		<br><br><br>
 		<div id="instructions">
-			<p class="instructions" style="text-decoration: underline; font-weight: 500;"><span class="corner-left">&#12300;</span>INSTRUCTION</p>
+			<p class="instructions" style="text-decoration: underline; font-weight: 500;"><span class="corner-left" >&#12300;</span>INSTRUCTION</p>
 			<p class="instructions">Please use the left and right keyboard arrows to navigate through the rest of the visualization.</p>
 		<!-- </div>
 			<div id="disclaimer"> -->
 				<br>
-				<p class="instructions" style="text-decoration: underline; font-weight: 500;">DISCLAIMER</p>
-				<p class ="instructions">This visualization works best in 1280x800 or larger screen sizes on WebGL supported browsers.<span class="corner-right">&#12301;</span></p>
+				<p class="instructions" style="text-decoration: underline; font-weight: 700;">DISCLAIMER</p>
+				<p class ="instructions">This visualization works best in 1280x800 or larger screen sizes on WebGL supported browsers.<span class="corner-right animate-flicker">&#12301;</span></p>
 		</div>
 	</div>
 
