--- a/main.html
+++ b/main.html
@@ -360,6 +360,7 @@ function drawImage(imagePath, imageScale) {
     imgNode.setAttribute('width', "auto");//(imageScale || 1.0) * divCanvas.clientHeight - 1);
     imgNode.setAttribute('height', "auto" );//(imageScale || 1.0) * divCanvas.clientHeight - 1);
     imgNode.setAttribute('alt', 'image');
+    // imgNode.className = 'animated fadeIn';
     divCanvas.appendChild(imgNode);
 }
 
@@ -518,6 +519,7 @@ function updateController(params){
 function toggleBorders(className, toggleOption){
 	var borderStyle = "border: 1px solid #cccccc";
   	var newClass = className + "-border";
+    var newClass2 = "animate-flicker";
 
   	var elements = document.getElementsByClassName(className);
 
@@ -525,12 +527,14 @@ function toggleBorders(className, toggleOption){
   		var i = 0;
   		for(i = 0; i < elements.length; i++){
             elements[i].classList.remove(newClass);
+            elements[i].classList.remove(newClass2);
   		}
 
   	}else{
   		var i = 0;
   		for(i = 0; i < elements.length; i++){
   			elements[i].classList.add(newClass);
+        elements[i].classList.add(newClass2);
   		}
   	}
 }
@@ -559,7 +563,6 @@ function toggleTop(idName, toggleOption){
   		element.classList.remove(newClass);
   		// console.log("Removing Padding");
 	}
-
 }
 
 function toggleCenter(toggleStatus){
@@ -570,7 +573,6 @@ function toggleCenter(toggleStatus){
         explanation.css('text-align','left');
     }
 }
-
 
 function toggleRight(idName, toggleOption){
   	var newClass = idName + "-new";
@@ -584,16 +586,15 @@ function toggleRight(idName, toggleOption){
   		element.classList.remove(newClass);
   		// console.log("Removing Padding");
 	}
-
 }
 
 var interval = null;
 function toggleHighlight(className, toggleOption){
 	var glower = $(className);
-	if(toggleOption){
+	if (toggleOption) {
         console.log(toggleOption);
 		interval = setInterval(function(){ glower.toggleClass('active'); }, 1000);
-	}else{
+	} else {
 		if(interval !== null){
 			clearInterval(interval);
 			glower.removeClass('active');
@@ -619,16 +620,39 @@ function toggleLegend(idName, toggleOption){
     }
 }
 
-function toggles(params){
+function toggles(params) {
 	toggleBorders("col-label", params.toggleColBorder);
 	toggleBorders("row-label", params.toggleRowBorder);
 	toggleBorders("cell-label", params.toggleCellBorder);
 	toggleTitle("title", params.toggleTitle);
 	toggleTop("contents-top", params.toggleTop);
-    toggleTop("contents-left", params.toggleTop);
+  toggleTop("contents-left", params.toggleTop);
 	toggleRight("contents-right", params.toggleRight);
 	toggleLegend('legend-area', params.toggleLegend);
     toggleHighlight('.dg.main .close-button', params.lastSlide);
+}
+
+
+function foldContentTopAndColLabelArea(storyNum) {
+  var label = document.getElementById("col-label-area");
+  var top = document.getElementById("contents-top");
+
+  console.log(label);
+  console.log(top);
+
+  if (storyNum < 12) {
+    label.style.height = '0%';
+    top.style.height = '0%';
+    //label.style.height('0%');
+    //top.setAttribute("display", "none");
+    console.log("inside the if statement");
+  } else {
+    label.style.height= '10%';
+    top.style.height = '5%';
+    // top.setAttribute("display",
+    // label.setAttribute("display", "block");
+    // top.setAttribute("display", "block");
+  }
 }
 
 function updateParams(params, storyNum) {
@@ -658,7 +682,7 @@ function updateParams(params, storyNum) {
             }
         } else {
             if(storyNum >= 0){
-                removeLabels();
+              removeLabels();
             	drawImage(params.image, params.imageScale);
             	toggles(params);
             };
@@ -787,6 +811,7 @@ function goNextStory() {
         updateParams(stories[storyNum].params, storyNum);
         placeTextInExplanationArea(stories[storyNum].text, true, withGoNext, stories[storyNum].params.explanationTranslateRatio);
         toggleCenter(stories[storyNum].params.toggleCenter);
+        foldContentTopAndColLabelArea(storyNum);
     } else {
         toggleTop("contents-top", true);
         toggleTop("contents-left", true);
@@ -810,16 +835,19 @@ function goPrevStory() {
         updateParams(stories[storyNum].params, storyNum);
         placeTextInExplanationArea(stories[storyNum].text, withGoBack, true, stories[storyNum].params.explanationTranslateRatio);
         toggleCenter(stories[storyNum].params.toggleCenter);
+        foldContentTopAndColLabelArea(storyNum);
     }
 }
 
 function initStory() {
     storyNum = 0; //25
+    console.log(storyNum);
     updateParams(stories[storyNum].params, storyNum);
     removeExplanationArea();
     createExplanationArea();
     placeTextInExplanationArea(stories[storyNum].text, false, true, stories[storyNum].params.explanationTranslateRatio);
     toggleCenter(stories[storyNum].params.toggleCenter);
+    foldContentTopAndColLabelArea(storyNum);
     // connectEvent();
 }
 
