--- a/title2.html
+++ b/title2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Title</title>
+	<title>Investigating Disease Associations in Taiwan</title>
 	<link href="./css/normalize.css" rel ="stylesheet" type='text/css'>
 	<link href="./css/title.css" rel='stylesheet' type='text/css'>
 	<script src="./js/jquery-3.3.1.min.js"></script>
