--- a/title2.html
+++ b/title2.html
@@ -32,7 +32,7 @@
 			keyPressCount++;
 
 			if(keyPressCount == 1){ myFunction();}
-			else{ window.location.href = "main.html";}
+			else{ window.location.href = "title3.html";}
     	}
 	});
 
