--- a/main.html
+++ b/main.html
@@ -952,7 +952,7 @@ function restartStory(){
                     </div>
                     <div class="legend">
                         <div class="legend-title">Nucleus Size</div>
-                        <div class="legend-desc">Depends on the number of other diseases that positively associate with the nucleus</div>
+                        <div class="legend-desc">Depends on the number of other diseases that associate with the nucleus</div>
                     </div>
                     <div class="legend">
                         <div class="legend-title">Flagellum distance from the nucleus</div>
@@ -960,7 +960,7 @@ function restartStory(){
                     </div>
                     <div class="legend">
                         <div class="legend-title">Thickness of flagellum</div>
-                        <div class="legend-desc">Indicates the number of diseases that have a strong association at that point. </div>
+                        <div class="legend-desc">Indicates the number of diseases that have the same association. </div>
                     </div>
                     <div class="legend">
                         <div class="legend-title">Fluctuations of flagellum</div>
