--- a/title2.html
+++ b/title2.html
@@ -15,7 +15,9 @@
 			<h1  class="animated fadeIn"style="font-size: 13px; text-align:left; font-weight: 300; margin-top: -18px;">[*]http://www.who.int/gho/mortality_burden_disease/causes_death/top_10/en/</h1>
 			<br><br>
 			<div id="myDIV" class="animated fadeIn" style="display: none;">
-				<p>Reasonably so.  Doctors and reseachers have pointed out that lifestyle and environmental changes significantly reduce the likelihood of such diseases. However, what people may not be quite aware of is the progression of certain diseases and how strongly and positively associated they are to other diseases.</p>
+				<p>Probably. Doctors and researchers have pointed out that lifestyle and environment significantly influence the likelihood of many diseases. 
+				<br>
+				However, what we may not always be aware of is the co-occurrence of many diseases and the evolution of the bundle of ailments with age. We know that high blood pressure is likely to occur often in patients who suffered a stroke.  Is there an association between mental health and digestive disorders?</p>
 			</div>
 		</div>
 	</div>
@@ -40,14 +42,10 @@
 $(document).on('keyup', function(event){
 	if(event.keyCode == 37) {
 		event.preventDefault();
-		// if (storyNum < stories.length) {
-    		// goPrevStory();
     		window.location.href="index.html"
-    	// }
     }
     else if(event.keyCode == 39) {
     	event.preventDefault();
-			// window.location.href = "title3.html";
     }
 });
 
