--- a/title3.html
+++ b/title3.html
@@ -9,12 +9,11 @@
 
 	<div id="container">
 		<div id="explaination2">
-			<h1 style="font-size: 36px; text-align:left;">We will explore co-occurrence in diseases.</h1>
+			<h1 style="font-size: 36px; text-align:left;">We will explore co-occurrence of diseases.</h1>
 			<br><br>
 			<div id="myDIV" class="animated fadeIn" style="display: none;">
 				<p>
-					There are thousand's of individual diseases.
-					We consider individual diseases that are commonly aggregated into the first 10 disease categories as classified by ICD-9-CM*.
+					There are thousands of individual diseases.   Our data contains the co-occurrence of diseases at the level of granularity of ICD-9* codes.In our visualization we group these individual diseases into 10 categories.
 					<br>
 					<span  class="animated fadeIn"style="font-size: 13px; text-align:left; font-weight: 300; margin-top: -18px;">[*]http://icd9cm.chrisendres.com/</span>
 				</p>
@@ -41,10 +40,7 @@
 	$(document).on('keyup', function(event){
 		if(event.keyCode == 37) { 
 			event.preventDefault();
-			// if (storyNum < stories.length) {
-	    		// goPrevStory(); 
-	    		window.location.href="title2.html"
-	    	// }
+	    	window.location.href="title2.html"
 	    }
 	});
 
