--- a/title3.html
+++ b/title3.html
@@ -11,11 +11,11 @@
 		<div id="explaination2">
 			<h1 style="font-size: 36px; text-align:left;">We will explore co-occurrence of diseases.</h1>
 			<br><br>
-			<div id="myDIV" class="animated fadeIn" style="display: none;">
+			<div id="myDIV"">
 				<p>
 					There are thousands of individual diseases.   Our data contains the co-occurrence of diseases at the level of granularity of ICD-9* codes.In our visualization we group these individual diseases into 10 categories.
 					<br>
-					<span  class="animated fadeIn"style="font-size: 13px; text-align:left; font-weight: 300; margin-top: -18px;">[*]http://icd9cm.chrisendres.com/</span>
+					<span style="font-size: 13px; text-align:left; font-weight: 300; margin-top: -18px;">[*]http://icd9cm.chrisendres.com/</span>
 				</p>
 			</div>
 		</div>
