--- a/main.html
+++ b/main.html
@@ -951,12 +951,12 @@ function restartStory(){
                         </div>
                     </div>
                     <div class="legend">
-                        <div class="legend-title">Nucleus Size</div>
-                        <div class="legend-desc">Depends on the number of other diseases that associate with the nucleus</div>
+                        <div class="legend-title">Capsule Size</div>
+                        <div class="legend-desc">Depends on the number of other diseases that associate with the capsule</div>
                     </div>
                     <div class="legend">
-                        <div class="legend-title">Flagellum distance from the nucleus</div>
-                        <div class="legend-desc">The longer the flagellum the stronger the association with the nucleus</div>
+                        <div class="legend-title">Flagellum distance from the capsule</div>
+                        <div class="legend-desc">The longer the flagellum the stronger the association with the capsule</div>
                     </div>
                     <div class="legend">
                         <div class="legend-title">Thickness of flagellum</div>
